2014-11-14  Alexey Proskuryakov  <ap@apple.com>

        Many (most?)  transitions tests are very flaky, frequently failing all at once
        https://bugs.webkit.org/show_bug.cgi?id=137883

        * TestExpectations:
        * platform/mac/TestExpectations:
        Add more affected tests to unbreak EWS.

2014-11-11  David Hyatt  <hyatt@apple.com>

        Table rows repaint entire table when their background color changes.
        https://bugs.webkit.org/show_bug.cgi?id=26662

        Reviewed by Simon Fraser.

        Added fast/repaint/table-row-repaint.html

        * fast/repaint/table-row-repaint-expected.txt: Added.
        * fast/repaint/table-row-repaint.html: Added.
        * platform/mac/accessibility/table-detection-expected.txt:

2014-11-14  Andrzej Badowski  <a.badowski@samsung.com>

        AX: Improve AccessibilityTableCell isColumnHeaderCell function.
        https://bugs.webkit.org/show_bug.cgi?id=138423

        Reviewed by Chris Fleizach.

        Files of expected type are adapted to changes in the code of the function.

        * accessibility/table-cells-roles-expected.txt:
        * platform/efl/accessibility/table-attributes-expected.txt:
        * platform/efl/accessibility/table-cells-expected.txt:
        * platform/gtk/accessibility/table-attributes-expected.txt:
        * platform/gtk/accessibility/table-cells-expected.txt:
        * platform/mac/accessibility/table-attributes-expected.txt:
        * platform/mac/accessibility/table-cells-expected.txt:

2014-11-14  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed GTK+ gardening. Skip http/tests/appcache/auth.html after r175776.

        Appcache manifest is still downloaded in the WebProcess.

        * platform/gtk/TestExpectations:

2014-11-14  Alexey Proskuryakov  <ap@apple.com>

        Remove some ineffective entries.

        * platform/mac/TestExpectations: Remove entries that were meant to override other
        ones, but don't.
