@@ -1,0 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+@font-face {
+    font-family: "DroidSans";
+    src: url("../writing-mode/resources/DroidSansFallback-reduced.ttf") format("truetype");
+}
+</style>
+</head>
+<body>
+    This test makes sure that small-caps of web fonts work regardless of whether
+    the web font is supplied in SVG or in CSS.
+    <svg width="500px" height="40px">
+        <text font-family="DroidSans" x="0" y="16" font-variant="normal">This is some text</text>
+        <text font-family="DroidSans" x="0" y="32" font-variant="small-caps">This is some text</text>
+    </svg>
+    <div style="font-family: DroidSans; font-variant: small-caps;">This is some text</div>
+    <div style="font-family: DroidSans;">This is some text</div>
+</body>
+</html>
+
